# stockstats-alpha-lab

./: .gitignore  DASHBOARD_USER_GUIDE.md  ENHANCEMENT_SUMMARY.md  MAKEFILE_GUIDE.md  Makefile  QUICK_START_GUIDE.md  README.md  STRATEGY_PARAMETERS_GUIDE.md  demo.py  enhanced_demo.py  pyproject.toml  requirements.txt  strategy_parameters_demo.py  streamlit_app.py  test_enhanced_features.py
notebooks/: 01_data_loading.ipynb  02_feature_engineering_stockstats.ipynb  03_signal_eval_crossval.ipynb  04_strategy_backtests.ipynb  05_risk_reports.ipynb
src/: __init__.py  advanced_indicators.py  backtest.py  benchmarking.py  data.py  indicators.py  labeling.py  models.py  optimization.py  plots.py  risk_metrics.py
tests/: __init__.py  test_advanced_indicators.py  test_backtest.py  test_benchmarking.py  test_indicators.py  test_labeling.py  test_optimization.py  test_risk_metrics.py  test_streamlit_app.py
